@@ -6,17 +6,23 @@ from plone.app.layout.viewlets.common import ViewletBase
 from Products.CMFCore.utils import getToolByName
 
 from Products.Five.browser.pagetemplatefile import ViewPageTemplateFile
+
 from pcommerce.core.interfaces import IPricing, IProduct, IVariation
 from pcommerce.core.currency import CurrencyAware
 
+
 class VariationViewlet(ViewletBase):
     index = ViewPageTemplateFile('variation.pt')
-    
+
+    def update(self):
+        super(VariationViewlet, self).update()
+        self.product_view = getMultiAdapter((self.context, self.request), name=u'view')
+
     @property
     @memoize
     def product(self):
-        return self.view.product
-    
+        return self.product_view.product
+
     def variation_items(self):
         props = getToolByName(self.context, 'portal_properties').pcommerce_properties
         columns = int(props.getProperty('columns', 3))
@@ -24,23 +30,23 @@ class VariationViewlet(ViewletBase):
         width = width and 'image/thumb?width=%s' % width or 'image_thumb'
         items = []
         i = 0
-              
+
         catalog = getToolByName(self.product, 'portal_catalog')
         variations = catalog(object_provides=IVariation.__identifier__, path={'query': '/'.join(self.product.getPhysicalPath())})
-        
+
         for variation in variations:
             col = i % columns + 1
             i += 1
-            
+
             variation = variation.getObject()
             adapter = IPricing(self.product)
-            
+
             if variation.UID() != self.context.UID():
                 image = None
                 if variation.getImage():
                     image = {'caption': variation.getImageCaption(),
                              'thumb': '%s/%s' % (variation.absolute_url(), width)}
-                
+
                 items.append({'uid': variation.UID(),
                               'class': 'col%s' % col,
                               'title': '%s: %s' % (variation.getType(), variation.Title()),
